--- a/index.html
+++ b/index.html
@@ -97,12 +97,9 @@
                         class="item p-3 items-center gap-5 justify-end mx-5 flex   hover:bg-gray-800 cursor-pointer rounded-full w-fit">
 
                         <div class="p1"><img class="w-12 h-12"
-                                src="https://pbs.twimg.com/profile_images/1522060025854066688/IZs_lylH_bigger.png"
-                                alt="vercel"></div>
-                        <div class="p2 ">
-                            <div>Haris Ali Khan</div>
-                            <div class="text-gray-500">@CodeWithHarry</div>
-                        </div>
+                                src="https://github.com/lakshayt324.png"
+                                alt="lakshayt324"></div>
+
 
                         <div class="p3 text-2xl">
                             ...
@@ -129,7 +126,7 @@
             <div class="whatishapp flex gap-4 my-3">
                 <div class="img m-2 w-16">
 
-                    <img src="https://pbs.twimg.com/profile_images/1522060025854066688/IZs_lylH_bigger.png" alt="">
+                    <img src="https://github.com/lakshayt324.png" alt="lakshayt324">
                 </div>
                 <div class="w-full">
                     <input class="w-full h-7 my-2 text-xl bg-black outline-none text-white" type="text"
@@ -187,7 +184,7 @@
                             <div class="postimg m-2 ml-0"> I spent $44 billion for this app and now Lizard boy just
                                 decided to hit copy and paste.
 
-                                It’s personal now.
+                                It's personal now.
 
                                 See you in the cage, Zuck.
                             </div>
@@ -227,41 +224,41 @@
                     <div class="flex">
                         <div class="image m-4">
                             <img class="w-16"
-                                src="https://pbs.twimg.com/profile_images/1522060025854066688/IZs_lylH_bigger.png"
-                                alt="">
+                                src="https://github.com/lakshayt324.png"
+                                alt="lakshayt324">
                         </div>
                         <div class="content my-3">
-                            <span class="font-bold hover:underline cursor-pointer text-white">CodeWithHarry</span> <span
-                                class="text-gray-500">@CodeWithHarry · 6h </span>
-                            <div>Living legend</div>
+                            <span class="font-bold hover:underline cursor-pointer text-white">Lakshay</span> <span
+                                class="text-gray-500">@lakshayt324 · 3h </span>
+                            <div>Hi Today is the 16th August 2025 and I have deployed the X clone alongside 4 other projects i completed, please check them out</div>
                             <div class="postimg m-4 ml-0">
                                 <img class="rounded-xl"
-                                    src="https://pbs.twimg.com/media/GEGqnodacAAoyCO?format=jpg&name=900x900" alt="">
+                                    src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?w=500&h=300&fit=crop" alt="coding setup">
                             </div>
                             <div class="icons flex justify-between mx-4 my-4 text-sm text-gray-600">
                                 <div
                                     class="icon flex items-center justify-center hover:text-blue-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer">
                                     <span class="material-symbols-outlined">
                                         chat_bubble
-                                    </span> 1k
+                                    </span> 12
                                 </div>
                                 <div
                                     class="icon flex items-center justify-center hover:text-green-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer">
                                     <span class="material-symbols-outlined">
                                         repeat
-                                    </span> 1k
+                                    </span> 5
                                 </div>
                                 <div
                                     class="icon flex items-center justify-center hover:text-pink-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer">
                                     <span class="material-symbols-outlined">
                                         Favorite
-                                    </span> 1k
+                                    </span> 23
                                 </div>
                                 <div
                                     class="icon flex items-center justify-center hover:text-blue-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer">
                                     <span class="material-symbols-outlined">
                                         bar_chart
-                                    </span> 1k
+                                    </span> 156
                                 </div>
 
                             </div>
@@ -273,42 +270,41 @@
                     <div class="flex">
                         <div class="image m-4">
                             <img class="w-8"
-                                src="https://pbs.twimg.com/profile_images/1724504100136439808/J8k8HnSD_bigger.png"
-                                alt="">
+                                src="https://github.com/lakshayt324.png"
+                                alt="lakshayt324">
                         </div>
                         <div class="content my-3">
-                            <span class="font-bold hover:underline cursor-pointer text-white"> non aesthetic
-                                things</span> <span class="text-gray-500">@CodeMeme · 6h </span>
-                            <div>This is amazing coding meme</div>
+                            <span class="font-bold hover:underline cursor-pointer text-white">Lakshay</span> <span class="text-gray-500">@lakshayt324 · 5h </span>
+                            <div>Hi!!!!!!!!!!!!</div>
                             <div class="postimg m-4 ml-0">
                                 <img class="rounded-xl w-full"
-                                    src="https://s3.amazonaws.com/rails-camp-tutorials/blog/programming+memes/works-doesnt-work.jpg"
-                                    alt="">
+                                    src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=500&h=300&fit=crop"
+                                    alt="web development">
                             </div>
                             <div class="icons flex justify-between mx-4 my-4 text-sm text-gray-600">
                                 <div
                                     class="icon flex items-center justify-center hover:text-blue-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer">
                                     <span class="material-symbols-outlined">
                                         chat_bubble
-                                    </span> 1k
+                                    </span> 8
                                 </div>
                                 <div
                                     class="icon flex items-center justify-center hover:text-green-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer">
                                     <span class="material-symbols-outlined">
                                         repeat
-                                    </span> 1k
+                                    </span> 3
                                 </div>
                                 <div
                                     class="icon flex items-center justify-center hover:text-pink-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer">
                                     <span class="material-symbols-outlined">
                                         Favorite
-                                    </span> 1k
+                                    </span> 15
                                 </div>
                                 <div
                                     class="icon flex items-center justify-center hover:text-blue-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer">
                                     <span class="material-symbols-outlined">
                                         bar_chart
-                                    </span> 1k
+                                    </span> 89
                                 </div>
 
                             </div>
@@ -324,9 +320,9 @@
                                 alt="">
                         </div>
                         <div class="content my-3">
-                            <span class="font-bold hover:underline cursor-pointer text-white"> non aesthetic
-                                things</span> <span class="text-gray-500">@PicturesFoIder · 6h </span>
-                            <div>legend</div>
+                            <span class="font-bold hover:underline cursor-pointer text-white">CodeWithHarry</span> <span
+                                class="text-gray-500">@CodeWithHarry · 8h </span>
+                            <div>Great to see young developers building amazing projects! Keep coding! 🔥</div>
                             <div class="postimg m-4 ml-0">
                                 <img class="rounded-xl"
                                     src="https://pbs.twimg.com/media/GEGqnodacAAoyCO?format=jpg&name=900x900" alt="">
@@ -336,25 +332,25 @@
                                     class="icon flex items-center justify-center hover:text-blue-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer">
                                     <span class="material-symbols-outlined">
                                         chat_bubble
-                                    </span> 1k
+                                    </span> 45
                                 </div>
                                 <div
                                     class="icon flex items-center justify-center hover:text-green-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer">
                                     <span class="material-symbols-outlined">
                                         repeat
-                                    </span> 1k
+                                    </span> 12
                                 </div>
                                 <div
                                     class="icon flex items-center justify-center hover:text-pink-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer">
                                     <span class="material-symbols-outlined">
                                         Favorite
-                                    </span> 1k
+                                    </span> 87
                                 </div>
                                 <div
                                     class="icon flex items-center justify-center hover:text-blue-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer">
                                     <span class="material-symbols-outlined">
                                         bar_chart
-                                    </span> 1k
+                                    </span> 234
                                 </div>
 
                             </div>
@@ -374,20 +370,20 @@
                 <h1 class="text-xl font-bold px-3">Whats Happening</h1>
                 <div class="item p-3 hover:bg-gray-800 cursor-pointer px-3">
                     <div class="text-sm text-gray-200">Trending in India</div>
-                    <div class="font-bold">#Orry</div>
-                    <div class="text-sm text-gray-200">40.2k Posts</div>
+                    <div class="font-bold">#WebDevelopment</div>
+                    <div class="text-sm text-gray-200">25.2k Posts</div>
                 </div>
 
                 <div class="item p-3 hover:bg-gray-800 cursor-pointer px-3">
-                    <div class="text-sm text-gray-200">Trending in India</div>
-                    <div class="font-bold">#Harry</div>
-                    <div class="text-sm text-gray-200">40.2k Posts</div>
+                    <div class="text-sm text-gray-200">Trending in Tech</div>
+                    <div class="font-bold">#Vercel</div>
+                    <div class="text-sm text-gray-200">18.5k Posts</div>
                 </div>
 
                 <div class="item p-3 hover:bg-gray-800 cursor-pointer px-3">
-                    <div class="text-sm text-gray-200">Trending in India</div>
-                    <div class="font-bold">#Sigma Course</div>
-                    <div class="text-sm text-gray-200">40.2k Posts</div>
+                    <div class="text-sm text-gray-200">Trending in Programming</div>
+                    <div class="font-bold">#TailwindCSS</div>
+                    <div class="text-sm text-gray-200">32.1k Posts</div>
                 </div>
 
                 <div class="item p-3 hover:bg-gray-800 cursor-pointer px-3">
@@ -424,7 +420,7 @@
 
                         <div class="p1"><img class="w-12 h-12"
                                 src="https://pbs.twimg.com/profile_images/446356636710363136/OYIaJ1KK_bigger.png"
-                                alt="vercel"></div>
+                                alt="react"></div>
                         <div class="p2 ">
                             <div>React</div>
                             <div class="text-gray-500">@react</div>
@@ -441,7 +437,7 @@
 
                         <div class="p1"><img class="w-12 h-12"
                                 src="https://pbs.twimg.com/profile_images/989513875124117504/UNMIb20k_bigger.jpg"
-                                alt="vercel"></div>
+                                alt="shadcn"></div>
                         <div class="p2 ">
                             <div>Shad.js</div>
                             <div class="text-gray-500">@shad</div>
